--- a/TrackKey/key.css
+++ b/TrackKey/key.css
@@ -2,6 +2,11 @@ body {
     height: 200px;
     background: beige;
     }
- button {
-     background-color: rgb(21, 124, 21);
- }
+button {
+    	background-color: rgb(21, 124, 21);
+	width:200px;
+	height: 70px;
+	font-weight:bold;
+	padding: 6px;
+	border-radius:5px;
+}
